# project_meenakshi

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: deploy-oracle.yml
arduino/: arduino_mqtt_device.ino  uno_r4_wifi_cloud_device.ino
arduino/uno_r4_wifi_cloud_device/: uno_r4_wifi_cloud_device.ino
cpp-api/: .dockerignore  CMakeLists.txt  Dockerfile  README.md
cpp-api/src/: api_logic.cpp  api_logic.h  main.cpp
cpp-api/tests/: api_logic_tests.cpp
db/init/: 01-schema.sql
docs/: architecture.md
next-app/: Dockerfile  package-lock.json  package.json
next-app/app/: DashboardAutoRefresh.js  DashboardSwitchTileButton.js  DashboardWidgetModal.js  DeviceSetupModal.js  LedToggleButton.js  WifiSerialProvisioner.js  globals.css  layout.js  page.js
next-app/app/api/dashboard-tiles/[tileId]/toggle/: route.js
next-app/app/api/devices/[deviceId]/command/: route.js
next-app/app/api/devices/[deviceId]/heartbeat/: route.js
next-app/lib/: arduino-sketch.js  auth.js  db.js  devices.js
scripts/: deploy-on-server.sh  open-arduino-network-ports.ps1  start-arduino-heartbeat-proxy.ps1  start-arduino-port-forward.ps1
